--- a/src/precss/vars.less
+++ b/src/precss/vars.less
@@ -16,7 +16,7 @@
 	padding-top: 8%;
 }
 
-.page-subcaption {
+.page-subcaption(){
     text-align: center;
 	font-family: Merriweather;
 	font-size: 18px;
@@ -27,7 +27,8 @@
 	margin-bottom: 0;
 }
 
-.caption-article {
+.caption-article(){
+	margin-bottom: 20px;
     font-family: Merriweather;
 	font-size: 20px;
 	font-weight: 700;
@@ -36,7 +37,7 @@
 	color: #3e3f3f;
 }
 
-.text-article {
+.text-article(){
     font-family: Raleway;
 	font-size: 16px;
 	color: #404141;
