--- a/src/precss/vars.less
+++ b/src/precss/vars.less
@@ -14,6 +14,9 @@
 	margin-top: 0;
 	margin-bottom: 0;
 	padding-top: 8%;
+	.to(720px, {
+		font-size: 23px;
+	});
 }
 
 .page-subcaption(){
@@ -25,6 +28,9 @@
 	color: #5e5f5f;
 	margin-top: 15px;
 	margin-bottom: 0;
+	.to(720px, {
+		font-size: 15px;
+	});
 }
 
 .caption-article(){
@@ -35,6 +41,9 @@
 	letter-spacing: 1.2px;
 	text-transform: uppercase;
 	color: #3e3f3f;
+	.to(720px, {
+		font-size: 16px;
+	});
 }
 
 .text-article(){
@@ -43,4 +52,7 @@
 	color: #404141;
 	letter-spacing: 0.8px;
 	line-height: 28px;
+	.to(720px, {
+		font-size: 13px;
+	});
 }
