begin work at section OUR SERVICES

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -320,6 +320,11 @@ img {
 
 /* =============== SERVICES =============== */
 
+.main-services {
+  max-width: 100%;
+  background-color: #f9fbfb;
+}
+
 /* =============== TEAM =============== */
 
 /* =============== WHAT THEY SAYS =============== */
