--- a/src/precss/styles.less
+++ b/src/precss/styles.less
@@ -220,10 +220,12 @@
 	}
 }
 
-
 /* =============== SERVICES =============== */
 
-
+.main-services {
+	max-width: 100%;
+	background-color: rgb(249, 251, 251);
+}
 
 /* =============== TEAM =============== */
 
