--- a/src/precss/styles.less
+++ b/src/precss/styles.less
@@ -227,6 +227,52 @@
 	background-color: rgb(249, 251, 251);
 }
 
+.services-items {
+	margin-top: 9%;
+	margin-bottom: 5%;
+}
+
+.items-group {
+	.row-flex();
+	justify-content: center;
+}
+
+.services-item-1 {
+	.col();
+	.size(7);
+	margin-bottom: 15px;
+}
+
+.services-item-2 {
+	.col();
+	.size(5);
+	margin-bottom: 15px;
+}
+
+.services-item-3 {
+	.col();
+	.size(7);
+	margin-bottom: 15px;
+}
+
+.services-item-4 {
+	.col();
+	.size(5);
+	margin-bottom: 15px;
+}
+
+.services-item-5 {
+	.col();
+	.size(5);
+	margin-bottom: 15px;
+}
+
+.services-item-6 {
+	.col();
+	.size(7);
+	margin-bottom: 15px;
+}
+
 /* =============== TEAM =============== */
 
 
