--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -591,28 +591,6 @@ img {
   }
 }
 
-@media screen and (max-width: 850px) {
-  .services-item-1 .caption-item {
-    font-size: 16px;
-  }
-
-  .services-item-1 .content-item {
-    font-size: 13px;
-  }
-
-  .opacity .caption-item {
-    font-size: 16px;
-  }
-
-  .opacity .content-item {
-    font-size: 13px;
-  }
-
-  .opacity .know-more {
-    font-size: 16px;
-  }
-}
-
 @media screen and (max-width: 720px) {
   .btn .contact-us {
     margin: 15% auto 10%;
@@ -640,6 +618,34 @@ img {
 
   .works-items .works-item {
     width: calc(50% - 15px);
+  }
+
+  .services-item-1 {
+    width: calc(100% - 15px);
+  }
+
+  .services-item-1 {
+    padding: 8% 10%;
+  }
+
+  .services-item-2 {
+    width: calc(100% - 15px);
+  }
+
+  .services-item-3 {
+    width: calc(100% - 15px);
+  }
+
+  .services-item-4 {
+    width: calc(100% - 15px);
+  }
+
+  .services-item-5 {
+    width: calc(100% - 15px);
+  }
+
+  .services-item-6 {
+    width: calc(100% - 15px);
   }
 }
 
@@ -669,8 +675,62 @@ img {
   }
 }
 
+@media screen and (max-width: 430px) {
+  .services-item-1 .caption-item {
+    font-size: 16px;
+  }
+
+  .services-item-1 .content-item {
+    font-size: 13px;
+  }
+
+  .opacity .caption-item {
+    font-size: 16px;
+  }
+
+  .opacity .content-item {
+    font-size: 13px;
+  }
+
+  .opacity .know-more {
+    font-size: 16px;
+  }
+}
+
 @media screen and (max-width: 420px) {
   .content-about-us {
     padding: 0 20px 30px;
+  }
+
+  .services-item-6 {
+    min-height: 300px;
+  }
+}
+
+@media screen and (max-width: 350px) {
+  .services-item-3 {
+    min-height: 265px;
+  }
+}
+
+@media screen and (min-width: 720px) and (max-width: 850px) {
+  .services-item-1 .caption-item {
+    font-size: 16px;
+  }
+
+  .services-item-1 .content-item {
+    font-size: 13px;
+  }
+
+  .opacity .caption-item {
+    font-size: 16px;
+  }
+
+  .opacity .content-item {
+    font-size: 13px;
+  }
+
+  .opacity .know-more {
+    font-size: 16px;
   }
 }
