--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -554,6 +554,84 @@ img {
 
 /* =============== WHAT THEY SAYS =============== */
 
+.main-says {
+  max-width: 100%;
+  background-color: #f9fbfb;
+}
+
+.says-items {
+  margin-top: 9%;
+  padding-bottom: 5%;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.says-section-1 {
+  margin-right: 10%;
+  text-align: center;
+  flex-grow: 1;
+}
+
+.navigation-dots-says {
+  margin-top: 30px;
+  color: #d0d0d0;
+  font-size: 15px;
+}
+
+.says-section-2 {
+  flex-grow: 100;
+  flex-basis: 380px;
+  align-self: center;
+  display: flex;
+  flex-direction: column;
+}
+
+.says-section-2 .says-article {
+  text-align: center;
+  padding: 10% 10%;
+  background-color: #ebecee;
+}
+
+.says-section-2 .caption-article {
+  margin-bottom: 20px;
+  font-family: Merriweather;
+  font-size: 20px;
+  font-weight: 700;
+  letter-spacing: 1.2px;
+  text-transform: uppercase;
+  color: #3e3f3f;
+}
+
+.says-section-2 .text-article {
+  font-family: Raleway;
+  font-size: 16px;
+  color: #404141;
+  letter-spacing: 0.8px;
+  line-height: 28px;
+}
+
+.says-section-2 .says-raiting {
+  margin-top: 5%;
+}
+
+.says-section-2 .says-navigation {
+  align-self: center;
+}
+
+.says-section-2 .says-navigation-item {
+  font-size: 30px;
+  padding: 12px 22px 12px 20px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  margin: 15px;
+  transition: background-color 0.4s, box-shadow 0.3s;
+  cursor: pointer;
+}
+
+.says-section-2 .says-navigation-item:hover {
+  background-color: #71f6eb;
+  box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.2);
+}
+
 /* =============== BRANDS =============== */
 
 /* =============== CONTACTS =============== */
@@ -619,6 +697,18 @@ img {
   }
 }
 
+@media screen and (max-width: 820px) {
+  .says-section-1 {
+    margin-right: 0;
+  }
+}
+
+@media screen and (max-width: 730px) {
+  .navigation-dots-says {
+    margin-bottom: 30px;
+  }
+}
+
 @media screen and (max-width: 720px) {
   .btn .contact-us {
     margin: 15% auto 10%;
@@ -678,6 +768,14 @@ img {
 
   .team-item {
     width: calc(50% - 15px);
+  }
+
+  .says-section-2 .caption-article {
+    font-size: 16px;
+  }
+
+  .says-section-2 .text-article {
+    font-size: 13px;
   }
 }
 
