finished work at section BRANDS

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -634,6 +634,14 @@ img {
 
 /* =============== BRANDS =============== */
 
+.main-brands {
+  max-width: 100%;
+}
+
+.brands {
+  padding: 9% 0;
+}
+
 /* =============== CONTACTS =============== */
 
 /* =============== FOOTER =============== */
