--- a/src/precss/styles.less
+++ b/src/precss/styles.less
@@ -565,7 +565,13 @@
 
 /* =============== BRANDS =============== */
 
+.main-brands {
+	max-width: 100%;
+}
 
+.brands {
+	padding: 9% 0;
+}
 
 /* =============== CONTACTS =============== */
 
