--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -644,6 +644,118 @@ img {
 
 /* =============== CONTACTS =============== */
 
+.main-contacts {
+  max-width: 100%;
+  background: url("../images/tree1.png") no-repeat center;
+  background-size: cover;
+  height: 570px;
+  position: relative;
+}
+
+.main-contacts .contacts-opacity {
+  position: absolute;
+  max-width: 100%;
+  background-color: rgba(255, 255, 255, 0.7);
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+
+.contacts {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.forms {
+  background-color: rgba(2, 22, 35, 0.7);
+  flex-basis: 450px;
+  flex-grow: 100;
+  box-sizing: border-box;
+  padding: 3% 3% 3% 3%;
+  margin: 3% 1%;
+}
+
+.forms input[type="text"] {
+  display: block;
+  width: 95%;
+  border: none;
+  border-bottom: 1px solid #778289;
+  background-color: rgba(2, 22, 35, 0.01);
+  padding: 10px;
+  outline: none;
+  color: #b3bbc0;
+}
+
+.forms input[type="text"]::placeholder {
+  color: #b3bbc0;
+  font-family: Raleway;
+  font-size: 15px;
+}
+
+.forms textarea {
+  display: block;
+  width: 95%;
+  border: none;
+  border-bottom: 1px solid #778289;
+  resize: none;
+  color: #b3bbc0;
+  background-color: rgba(2, 22, 35, 0.01);
+  font-family: Raleway;
+  font-size: 15px;
+  margin-top: 25px;
+  margin-bottom: 50px;
+  padding: 10px;
+  outline: none;
+}
+
+.send-massege {
+  background-color: #6eeee4;
+  color: black;
+  border: none;
+  font-family: 'Montserrat';
+  font-weight: 500;
+  font-size: 15px;
+  letter-spacing: 2.16px;
+  text-transform: uppercase;
+  padding: 20px 40px;
+  cursor: pointer;
+  outline: none;
+  transition: background-color 0.5s, box-shadow 0.5s;
+}
+
+.send-massege:hover {
+  background-color: #14BDBD;
+  box-shadow: 4px 8px 10px rgba(0, 0, 0, 0.24);
+}
+
+.address {
+  flex-basis: 450px;
+  box-sizing: border-box;
+  flex-grow: 1;
+  margin: 3% 1%;
+  background-color: rgba(2, 22, 35, 0.7);
+  padding: 3% 3% 3% 3%;
+}
+
+.address .address-1 {
+  color: #b3bbc0;
+  font-family: Raleway;
+  font-size: 15px;
+  margin-bottom: 35px;
+}
+
+.address .address-2 {
+  color: #b3bbc0;
+  font-family: Raleway;
+  font-size: 15px;
+}
+
+.map {
+  max-width: 455px;
+  margin-top: 25px;
+}
+
 /* =============== FOOTER =============== */
 
 @media screen and (max-width: 1140px) {
@@ -676,6 +788,12 @@ img {
 
   .works-items .works-item {
     width: calc(33.333333333333336% - 15px);
+  }
+}
+
+@media screen and (max-width: 955px) {
+  .main-contacts {
+    height: 950px;
   }
 }
 
@@ -817,6 +935,12 @@ img {
   }
 }
 
+@media screen and (max-width: 500px) {
+  .main-contacts {
+    height: 850px;
+  }
+}
+
 @media screen and (max-width: 430px) {
   .services-item-1 .caption-item {
     font-size: 16px;
@@ -846,6 +970,12 @@ img {
 
   .services-item-6 {
     min-height: 300px;
+  }
+}
+
+@media screen and (max-width: 370px) {
+  .main-contacts {
+    height: 750px;
   }
 }
 
