--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -758,6 +758,88 @@ img {
 
 /* =============== FOOTER =============== */
 
+.main-footer {
+  max-width: 100%;
+  background-color: #262b2e;
+}
+
+.content-footer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 7% 0;
+}
+
+.content-footer h3 {
+  font-family: Raleway;
+  color: #a6a8a9;
+  font-size: 16px;
+  line-height: 25px;
+  letter-spacing: 0.16px;
+  margin-bottom: 10px;
+}
+
+.content-footer p {
+  color: #a6a8a9;
+  opacity: 0.4;
+  font-family: Raleway;
+  font-size: 16px;
+  letter-spacing: 0.16px;
+  text-align: center;
+}
+
+.footer-icons {
+  margin-bottom: 30px;
+}
+
+.footer-icon {
+  background-color: #424648;
+  color: #969596;
+  font-size: 25px;
+  cursor: pointer;
+  margin: 3px;
+}
+
+.fa-pinterest-p {
+  padding: 10px 15px;
+  margin: 3px;
+}
+
+.fa-pinterest-p:hover {
+  color: #0b1615;
+  background-color: #6eeee3;
+}
+
+.fa-twitter {
+  padding: 10px 12px;
+  margin: 3px;
+}
+
+.fa-twitter:hover {
+  color: #0b1615;
+  background-color: #6eeee3;
+}
+
+.fa-facebook-f {
+  padding: 10px 18px;
+  margin: 3px;
+}
+
+.fa-facebook-f:hover {
+  color: #0b1615;
+  background-color: #6eeee3;
+}
+
+.fa-basketball-ball {
+  padding: 10px 12px;
+  margin: 3px;
+}
+
+.fa-basketball-ball:hover {
+  color: #0b1615;
+  background-color: #6eeee3;
+}
+
 @media screen and (max-width: 1140px) {
   .content-about-us {
     flex-direction: column;
