add a color effect to words 'know more' on hover

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -526,6 +526,10 @@ img {
   cursor: pointer;
 }
 
+.opacity .know-more:hover {
+  color: #6df6eb;
+}
+
 /* =============== TEAM =============== */
 
 .main-team {
