--- a/src/precss/styles.less
+++ b/src/precss/styles.less
@@ -456,13 +456,17 @@
 		letter-spacing: 0.72px;
 		color: #f7f7f7;		
 		display: inline-block;
-		cursor: pointer;
+		cursor: pointer;				
 		.from-to(720px, 850px {
 			font-size: 16px;
 		});
 		.to(430px, {
 			font-size: 16px;
 		});
+
+		&:hover {
+			color: rgb(109, 246, 235,);
+		}
 	}
 }
 
