--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -119,89 +119,59 @@ img {
 
 .main-header {
   max-width: 100%;
+  position: relative;
   background-color: rgba(239, 240, 242, 0.99);
 }
 
-.header {
-  position: relative;
-}
-
 .menu {
-  position: relative;
+  position: fixed;
+  z-index: 200;
+  right: 0;
+  left: 0;
+  margin: 0 7%;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  background-color: #262b2e;
+  background-color: #5f6163;
 }
 
-.menu .menu-items {
+.menu .logo {
+  margin-top: 3px;
+}
+
+.menu-items {
   display: flex;
-  justify-content: space-between;
+  flex-wrap: wrap;
+  justify-content: space-around;
   align-items: center;
   flex-grow: 2;
 }
 
-.menu .menu-items li {
+.menu-items li {
   font-family: Montserrat;
   font-weight: 500;
   font-size: 18px;
+  margin: 10px;
 }
 
-.menu .menu-items li:last-child {
+.menu-items li:last-child {
   margin-right: 30px;
 }
 
-.menu .menu-items li .logo {
-  margin-top: 3px;
-}
-
-.menu .menu-items a {
+.menu-items a {
   text-decoration: none;
   color: #eff0f2;
+  transition: color 0.3s, text-shadow 0.3s;
 }
 
-.menu .menu-items a:hover {
+.menu-items a:hover {
   cursor: pointer;
   color: #76f4ea;
-}
-
-.menu .burger-item {
-  margin-top: 11px;
-  margin-left: 5px;
-  position: fixed;
-  flex-grow: 1;
-  z-index: 100;
-  align-self: center;
-  font-size: 28px;
-  color: rgba(0, 0, 0, 0.6);
-}
-
-.menu .burger-item:hover {
-  cursor: pointer;
-}
-
-.menu .close-item {
-  margin-top: 8px;
-  margin-left: 5px;
-  position: fixed;
-  flex-grow: 1;
-  z-index: 100;
-  align-self: center;
-  font-size: 28px;
-  color: rgba(0, 0, 0, 0.6);
-}
-
-.menu .close-item:hover {
-  cursor: pointer;
-}
-
-.menu .close {
-  display: none;
+  text-shadow: 2px 2px 4px #000000;
 }
 
 .caption-container {
-  margin: 13% auto 0;
-  padding: 0 15%;
+  padding: 150px 15% 0;
 }
 
 .caption-container .caption {
@@ -897,6 +867,12 @@ img {
   background-color: #6eeee3;
 }
 
+@media screen and (max-width: 1335px) {
+  .menu {
+    margin: 0;
+  }
+}
+
 @media screen and (max-width: 1140px) {
   .content-about-us {
     flex-direction: column;
@@ -936,6 +912,12 @@ img {
   }
 }
 
+@media screen and (max-width: 915px) {
+  .menu .logo {
+    display: none;
+  }
+}
+
 @media screen and (max-width: 900px) {
   .services-item-2 .caption-item {
     margin: 15% 15% 5%;
@@ -961,6 +943,12 @@ img {
 @media screen and (max-width: 820px) {
   .says-section-1 {
     margin-right: 0;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .menu-items li {
+    font-size: 14px;
   }
 }
 
