--- a/src/precss/styles.less
+++ b/src/precss/styles.less
@@ -725,7 +725,7 @@ body {
 	transition: background-color 0.5s, box-shadow 0.5s;
 	
 	&:hover {
-		background-color: #14BDBD;
+		background-color: rgb(242, 218, 59);
 		box-shadow: 4px 8px 10px rgba(0, 0, 0, 0.24);
 	}
 }
