--- a/src/precss/styles.less
+++ b/src/precss/styles.less
@@ -243,43 +243,85 @@ body {
 }
 
 .content-about-us {
-	.flex();
+	.flex();	
 	box-sizing: border-box;	
 	margin-top: 9%;
-	padding: 0 100px 70px;
-	.to(1140px, {
-		flex-direction: column;
-	});
+	padding-bottom: 60px;
+	.to(860px, {
+		padding-bottom: 40px;
+	});	
 	.to(690px, {
-		padding: 0 50px 50px;
+		padding: 0 50px 40px;
 	});
 	.to(420px, {
 		padding: 0 20px 30px;
 	});	
-}
-
-.image-about-us {	
-	margin: 0 auto;
 	
-	.navigation-dots-about-us {
-		margin: 30px 0;
-		text-align: center;
-		color: #d0d0d0;
-		font-size: 15px;		
-	}
+}	
 
-	.fa-circle:hover {
-		cursor: pointer;
+.images-about-us {	
+	margin: 0 auto;	
+	display: inline-block;
+	.to(860px, {
+		order: 1;
+	});		
+
+	.none {
+		display: none;
 	}
+	
+	.navigation-about-us {
+		display: flex;
+		justify-content: center;
+		color: #d0d0d0;
+		font-size: 15px;
+		.to(860px, {
+			margin-top: 20px;
+		});		
+		
+		.fa-circle {
+			margin: 35px 5px;
+
+			&:hover {
+				cursor: pointer;
+			}
+		}
+		
+		.fa-caret-left {
+			color: #000000;
+			font-size: 50px;
+			margin-top: 20px;
+			margin-right: 15%;
+			
+			&:hover {
+				cursor: pointer;
+			}
+		}
+
+		.fa-caret-right {
+			color: #000000;
+			font-size: 50px;
+			margin-top: 20px;
+			margin-left: 15%;
+			
+			&:hover {
+				cursor: pointer;
+			}
+		}
+	}
+	
 }
 
 .article-about-us {		
 	flex-basis: 380px;
 	flex-grow: 1;	
-	margin-left: 100px;
-	.to(1140px, {
-		margin-left: 0;
-	});		
+	padding: 0 10px 0 50px;
+	.to(821px, {
+		padding: 0 10px 0 10px;
+	});
+	.to(690px, {
+		padding: 0;
+	});
 
 	.caption-article {
 		.caption-article();
