--- a/src/precss/styles.less
+++ b/src/precss/styles.less
@@ -259,57 +259,12 @@ body {
 	
 }	
 
-.images-about-us {	
+.image-about-us {	
 	margin: 0 auto;	
 	display: inline-block;
 	.to(860px, {
 		order: 1;
-	});		
-
-	.none {
-		display: none;
-	}
-	
-	.navigation-about-us {
-		display: flex;
-		justify-content: center;
-		color: #d0d0d0;
-		font-size: 15px;
-		.to(860px, {
-			margin-top: 20px;
-		});		
-		
-		.fa-circle {
-			margin: 35px 5px;
-
-			&:hover {
-				cursor: pointer;
-			}
-		}
-		
-		.fa-caret-left {
-			color: #000000;
-			font-size: 50px;
-			margin-top: 20px;
-			margin-right: 15%;
-			
-			&:hover {
-				cursor: pointer;
-			}
-		}
-
-		.fa-caret-right {
-			color: #000000;
-			font-size: 50px;
-			margin-top: 20px;
-			margin-left: 15%;
-			
-			&:hover {
-				cursor: pointer;
-			}
-		}
-	}
-	
+	});			
 }
 
 .article-about-us {		
